--- a/src/public/index.html
+++ b/src/public/index.html
@@ -15,7 +15,8 @@
         }
         div.mainDiv {
             position: absolute;
-            background-color: #2b1f46;
+            background-color: #181818;
+            /* background-color: #2b1f46; */
             display: flex;
             margin: auto;
             padding: 0;
@@ -40,7 +41,8 @@
             border-width: 5px;
             border-style: solid;
             border-color: #bf406c;
-            background-color: #2b1f46;
+            background-color: #181818;
+            /* background-color: #2b1f46; */
             height: 80%;
             width: 95%;
             overflow: auto;
